# computer_graphics

./: .gitignore
assignment1/part1/src/: part1.cpp
assignment1/part1/src/shaders/: triangle.frag  triangle.vert
assignment1/part2/src/shaders/: triangle.frag  triangle.vert
assignment1/part3/src/shaders/: triangle.frag  triangle.vert
assignment1/part4/src/: part4.cpp
assignment2/part1/src/: .part1.cpp.swp  part1.cpp
assignment2/part1/src/shaders/: .rgb_cube.frag.swp  .rgb_cube.vert.swp  rgb_cube.frag  rgb_cube.vert
assignment2/part2/src/: .part2.cpp.swp  part2.cpp
assignment2/part2/src/shaders/: .mesh.frag.swp  .mesh.vert.swp  mesh.vert
assignment3/model_viewer/: CMakeLists.txt
assignment3/model_viewer/src/: .model_viewer.cpp.swp  model_viewer.cpp
assignment3/model_viewer/src/shaders/: .mesh.frag.swp  .mesh.vert.swp  mesh.frag  mesh.vert  skybox.frag  skybox.vert
project/: CMakeLists.txt  build.sh
project/report/: body.tex  main.tex  references.bib
project/src/: project.cpp  utils.h
project/src/shaders/: particle.frag  particle.vert
report/: Makefile  body.tex  main.tex
